<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/sign_up"
        android:src="@drawable/bg2"
        android:scaleType="centerCrop"
        />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:text="@string/back" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        >
        <!-- Full Name Field -->
        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:layout_below="@id/et_full_name"
            android:hint="@string/username"
            android:inputType="text" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:layout_below="@id/et_username"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <!-- Phone Number Field -->
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:layout_below="@id/et_password"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phone_number"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
