<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Blurred Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/login"
        android:src="@drawable/bg" />

    <!-- Semi-Transparent Overlay -->
    <!-- Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginPageTitle"
            android:textColor="#FF0000"
            android:textAlignment="center"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#898989"
            android:textColorHint="#B1B1B1"
            android:background="#29FFFFFF"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:background="#29FFFFFF"
            android:textColorHint="#B1B1B1"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnGoToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/sign_up"/>

    </LinearLayout>

</FrameLayout>
