<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/side_sheet_behavior"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnCloseApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/close_app" />

                <Button
                    android:id="@+id/btnBackToLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/back_to_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnOpenDigikala"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/open_digikala"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnOpenGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/open_google" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_users"
                android:textSize="48sp"
                android:layout_marginTop="100dp"
                android:textColor="#FF0000"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            >
                <TableLayout
                    android:id="@+id/tableUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:padding="2dp"
                    android:stretchColumns="*" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>